--- a/chat-frontend/package.json
+++ b/chat-frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "author": "You <you@example.com>",
-  "name": "rust-webpack-template",
+  "author": "HermitMotel",
+  "name": "heise-chat-frontend-example",
   "version": "0.1.0",
   "scripts": {
     "build": "rimraf dist pkg && webpack",
